# brain

./: .gitignore  LICENSE  README.md  pyproject.toml
bindings/parakeet/: CMakeLists.txt  parakeet_binding.cpp
config/: README.md  aec.yaml  default.yaml  language.yaml  llm.yaml  puppet.yaml  stt.yaml  tts.yaml  vad.yaml
config/profiles/: regular-mic.yaml  respeaker.yaml
deploy/systemd/: puppet.service
docs/: architecture.md  audio-pipeline.md  deployment.md
models/: README.md
scripts/: _llama_build.sh  _runtime.py  build_llama.sh  build_llama_prism.sh  build_native.sh  build_parakeet.sh  check_mic.py  download_models.sh  fetch_native_deps.sh  link_models.sh  patch_llama_prism_bindings.py  run_puppet.sh  test_llm.py  test_servo_pca9685.py  test_stt.py  test_tts.py
src/puppet/: __init__.py  main.py
src/puppet/core/: __init__.py  config.py  events.py  types.py
src/puppet/core/audio/: __init__.py  aec.py  buffer.py  capture.py  pcm.py  respeaker.py  speex_echo.py  vad.py  wav.py
src/puppet/hardware/: __init__.py  mouth.py  mouth_debug.py  pca9685.py
src/puppet/llm/: __init__.py  base.py  binding.py  llama.py  llama_server.py  perf.py
src/puppet/orchestrator/: __init__.py  generation.py  latency.py  pipeline.py  trace.py  tts_pipeline.py
src/puppet/stt/: __init__.py  base.py  parakeet.py
src/puppet/tts/: __init__.py  alignments.py  base.py  piper.py  types.py
tests/fixtures/: README.md
tests/functional/: test_component_scripts.py  test_full_turn.py  test_stt_jfk.py
tests/unit/: test_aec.py  test_audio_buffer.py  test_audio_capture.py  test_config.py  test_generation.py  test_latency.py  test_llama_llm.py  test_llama_server.py  test_llm_binding.py  test_llm_perf.py  test_llm_server_perf.py  test_mouth.py  test_mouth_debug.py  test_orchestrator.py  test_parakeet_stt.py  test_pcm.py  test_pipeline_trace.py  test_playback_clock.py  test_respeaker.py  test_speex_echo.py  test_stt_warmup.py  test_tts_alignments.py  test_tts_threads.py  test_tts_warmup.py  test_turn_latency.py  test_vad.py  test_wav.py
